--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,6 @@
 {
   "cli": {
-    "version": ">= 16.10.1",
-    "appVersionSource": "remote"
+    "version": ">= 0.52.0"
   },
   "build": {
     "development": {
@@ -9,13 +8,15 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+        "buildType": "apk"
+      }
     }
-  },
-  "submit": {
-    "production": {}
   }
 }
