--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "buddhayana-app",
     "slug": "buddhayana-app",
-    "version": "1.0.1",
+    "version": "1.0.4",
     "orientation": "portrait",
     "icon": "./assets/images/buddhayana.png",
     "scheme": "buddhayana-app",
@@ -16,12 +16,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/buddhayana-app.png",
+        "foregroundImage": "./assets/images/buddhayana.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
-      "package": "com.wahyuaji.buddhayanaapp",
-      "runtimeVersion": "1.0.1"
+      "edgeToEdgeEnabled": false,
+      "package": "com.wahyuaji.buddhayanaapp2",
+      "runtimeVersion": "1.0.4"
     },
     "web": {
       "bundler": "metro",
@@ -33,7 +33,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/buddhayana-app.png",
+          "image": "./assets/images/buddhayana.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -52,5 +52,5 @@
     "updates": {
       "url": "https://u.expo.dev/d3d5d512-060d-412a-a131-a9297739bad7"
     }
-  }
+  },
 }
